--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
+    "postcss-custom-media": "^7.0.8",
+    "postcss-custom-properties": "^9.0.2",
     "prettier": "^1.16.4"
   }
 }
